tests/invalid/ontology/relation-description-has-predicate.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if a relation of type 'description' that specifies a predicate attribute is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:0:mc"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="a" optional="false" multivalued="false" confidence="10" merge="match"/>
        </properties>
        <relations>
          <description source="a" target="b" predicate="is described as"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
